# dnscache

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  dnscache.toml  rust-toolchain.toml
.github/workflows/: 000_ci.yml  010_close_release.yml  011_release.yml  osv-scanner.yml  release.yml  scorecards.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_cache_key.rs  fuzz_handle.rs  fuzz_process_query.rs  fuzz_skip_name.rs  fuzz_target_1.rs
src/: config.rs  dns.rs  lib.rs  main.rs  server.rs
systemd/: Install-dnscache.sh  dnscache.service
tests/: README.md  fuzz_tests.sh  queries.txt  regression.rs  server_integration.rs  system_test.sh
