[package]
name = "dnscache-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dnscache]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_handle"
path = "fuzz_targets/fuzz_handle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cache_key"
path = "fuzz_targets/fuzz_cache_key.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_process_query"
path = "fuzz_targets/fuzz_process_query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_skip_name"
path = "fuzz_targets/fuzz_skip_name.rs"
test = false
doc = false
bench = false
